# Vibepollo

./: .gitignore  .gitmodules  .rgignore  ABSOLUTE_REVIEW_TODO.md  CMakeLists.txt  MERGE_REVIEW_ACTION_PLAN.md  NOTICE  README.md  architecture.md  findings.md  package.json  tailwind.config.js  tsconfig.base.json  vibeshine_state.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: backlog.yml  bug-report.yml  bug_report.md  config.yml  report-a-crash.yml
.github/workflows/: _codeql.yml  ci-bundle.yml  ci-copr.yml  ci-macos.yml  ci-test.yml  ci-windows.yml  ci.yml  environment-specific-closure.yml  localize.yml  tester-windows-installer.yml  update-pages.yml  webrtc-release.yml
.workflow/ultracode/audio-restore-spatial-flap/: final-report.md  integration.md  orchestration.md  plan.md  state.json
.workflow/ultracode/virtual-display-layout-touch/: final-report.md  integration.md  orchestration.md  plan.md  state.json
cmake/compile_definitions/: common.cmake  linux.cmake  macos.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake  ffmpeg.cmake  webrtc.cmake  windows.cmake
cmake/packaging/: common.cmake  linux.cmake  windows.cmake  windows_nsis.cmake  windows_wix.cmake
cmake/prep/: build_version.cmake  emit_windows_versioninfo.cmake  init.cmake  options.cmake  special_package_configuration.cmake
cmake/targets/: common.cmake  windows.cmake
docs/: api.md  building.md  configuration.md  contributing.md  ctm_bridge.md  getting_started.md  legal.md  remote_microphone.md
docs/signpath/: README.md  msi-file-apollo.artifact-config.xml  msi-file.artifact-config.xml  msi-install-apollo.artifact-config.xml  setup-exe.artifact-config.xml
packaging/linux/copr/: Sunshine.spec
packaging/windows/: LICENSE.rtf
packaging/windows/bootstrapper/: VibeshineInstaller.cs  app.manifest  build_bootstrapper.ps1
packaging/windows/virtual_display_driver/: refresh_driver_package.ps1
release_notes/: 1.15.4-stable.2.md  1.15.4-stable.3.md  1.15.4.md  1.15.5-alpha.1.md  1.15.5-alpha.3.md  1.15.5-beta.1.md  1.15.5-stable.2.md  1.15.5.md  1.16.0-alpha.1.md  1.16.0-alpha.2.md  1.16.0-alpha.3.md  1.16.0-alpha.4.md  1.16.0-beta.1.md  1.16.0-beta.10.md  1.16.0-beta.11.md  1.16.0-beta.12.md  1.16.0-beta.13.md  1.16.0-beta.2.md  1.16.0-beta.3.md  1.16.0-beta.4.md  1.16.0-beta.5.md  1.16.0-beta.6.md  1.16.0-beta.7.md  1.16.0-beta.8.md  1.16.0-beta.9.md  1.16.0-rc.1.md  1.16.0-stable.2.md  1.16.0-stable.3.md  1.16.0.md  1.17.0-beta.1.md  1.17.0-beta.2.md  1.17.0-beta.3.md  1.17.0-beta.4.md  1.17.0-beta.5.md  1.17.0-beta.6.md  1.17.0-beta.7.md  1.17.0-beta.8.md  1.17.0.md  1.18.0-beta.1.md  1.18.0-beta.2.md  (+2 more)
scripts/: build_mingw_webrtc.ps1  build_msvc_webrtc.ps1  configure_msvc_webrtc.ps1  download_truehdr_runtime_release.ps1  download_webrtc_release.ps1  get_webrtc_cache_keys.ps1  package_webrtc_release.ps1  pin_webrtc_release.ps1  publish_webrtc_release.ps1  signpath_sign.ps1
src/: audio.cpp  audio.h  boost_process_shim.cpp  boost_process_shim.h  config.cpp  config.h  config_playnite.cpp  config_playnite.h  confighttp.cpp  confighttp.h  confighttp_playnite.cpp  confighttp_rtss.cpp  crypto.cpp  crypto.h  display_device.cpp  display_device.h  display_helper_builder.cpp  display_helper_builder.h  display_helper_integration.h  entry_handler.cpp  file_handler.cpp  framegen_policy.h  globals.h  host_stats.cpp  host_stats.h  http_auth.cpp  http_auth.h  httpcommon.cpp  httpcommon.h  input.cpp  input.h  logging.cpp  logging.h  main.cpp  network.cpp  network.h  nvhttp.cpp  nvhttp.h  process.cpp  process.h  (+30 more)
src/amf/: amf_d3d11.cpp  amf_encoded_frame.h
src/nvenc/: nvenc_api.h  nvenc_base.cpp  nvenc_base.h  nvenc_config.h  nvenc_d3d11.h  nvenc_d3d11_native.h  nvenc_utils.h
src/platform/: common.h
tests/: CMakeLists.txt  test_config_playnite.cpp  test_playnite_autosync_reconcile.cpp  test_playnite_protocol.cpp  test_playnite_sync.cpp  test_playnite_sync_autosync.cpp  tests_environment.h
tests/frontend/: app-edit-framegen-policy.test.ts  changelog.test.ts  checkbox.test.ts  config-field-schema.test.ts  host-stats-store.test.ts  http-csrf.test.ts  l10n-static-audit.test.ts  navbar.test.ts  session-chart-datasets.test.ts  sessions-store.test.ts  setup.ts  streaming-status.test.ts  webrtc-latency.test.ts
tests/integration/: test_config_consistency.cpp  test_external_commands.cpp  test_virtual_display_packaging.cpp
tests/unit/: test_audio.cpp  test_config_parse.cpp  test_confighttp.cpp  test_display_device.cpp  test_display_helper_session_deferral.cpp  test_display_helper_v2_async_dispatcher.cpp  test_display_helper_v2_core.cpp  test_display_helper_v2_restore_engine.cpp  test_display_helper_v2_state_machine.cpp  test_display_helper_watchdog.cpp  test_file_handler.cpp  test_framegen_policy.cpp  test_host_stats.cpp  test_http_auth.cpp  test_http_pairing.cpp  test_httpcommon.cpp  test_input.cpp  test_lossless_scaling.cpp  test_network.cpp  test_nvenc_api.cpp  test_process.cpp  test_process_framegen_json.cpp  test_rtsp_startup_snapshot.cpp  test_session_history.cpp  test_state_storage.cpp  test_stream.cpp  test_version_compare.cpp  test_video.cpp  test_zwpad.cpp
tools/: CMakeLists.txt  audio.cpp  display_helper_paths.h  display_settings_helper.cpp  display_settings_helper_main.cpp  display_settings_helper_v2.cpp  dxgi.cpp  playnite_launcher.cpp  revive_sunshine_virtual_display_driver.ps1  sunshine_wgc_capture.cpp  sunshinesvc.cpp  vdd_temp_display_probe.cpp
tools/playnite_launcher/: arguments.cpp  arguments.h  cleanup.cpp  cleanup.h  focus_utils.cpp  focus_utils.h  launcher.cpp  launcher.h  lossless_scaling.cpp  lossless_scaling.h  main.cpp  playnite_process.cpp  playnite_process.h
tools/truehdr_shim/: _bshim.bat  _btest.bat  _exp.bat  build_truehdr_shim.ps1  truehdr_shim.cpp  truehdr_shim_test.cpp
(+326 files in other folders)
